[gd_scene load_steps=9 format=3 uid="uid://dwhe8kdqhjtt3"]

[ext_resource type="Texture2D" uid="uid://d3hfwvv0trptc" path="res://scenes/entities/weapons/scale_gun/resources/textures/weapon_scale_gun.png" id="1_3gw1s"]
[ext_resource type="Script" path="res://scenes/gui/hud/weapon_indicator/weapon_indicator.gd" id="2_hroqc"]
[ext_resource type="PackedScene" uid="uid://bn3v10jbvjp4c" path="res://scenes/gui/hud/weapon_reload_progress/weapon_reload_progress.tscn" id="2_uebb8"]
[ext_resource type="PackedScene" uid="uid://bipe013gu4lie" path="res://scenes/gui/hud/weapon_scroll_arrows/weapon_scroll_arrows.tscn" id="3_ch7mc"]

[sub_resource type="Animation" id="Animation_0457v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}

[sub_resource type="Animation" id="Animation_ryn0v"]
resource_name = "changed"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1, 1), Vector2(0.7, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dagml"]
_data = {
"RESET": SubResource("Animation_0457v"),
"changed": SubResource("Animation_ryn0v")
}

[sub_resource type="LabelSettings" id="LabelSettings_6wbtj"]
font_size = 6
outline_size = 4
outline_color = Color(0.129412, 0.121569, 0.188235, 1)

[node name="WeaponIndicator" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_hroqc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../WeaponSprite")
libraries = {
"": SubResource("AnimationLibrary_dagml")
}

[node name="WeaponReloadProgress" parent="." instance=ExtResource("2_uebb8")]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 37.0
offset_bottom = 36.0

[node name="WeaponSprite" type="Sprite2D" parent="."]
position = Vector2(21, 19)
rotation = -0.261799
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_3gw1s")

[node name="WeaponLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -22.0
offset_top = 36.0
offset_right = 66.0
offset_bottom = 53.0
text = "Scale Gun"
label_settings = SubResource("LabelSettings_6wbtj")
horizontal_alignment = 1

[node name="WeaponScrollArrows" parent="." instance=ExtResource("3_ch7mc")]
offset_left = -10.0
offset_top = 13.0
offset_right = 49.0
offset_bottom = 36.0
